--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.nameditemcollectiondata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemCollectionData:interface'
-    summary: <span data-ttu-id="aa8aa-101">描述通过调用 "namedItemCollection （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="aa8aa-101">An interface describing the data returned by calling "namedItemCollection.toJSON()".</span></span>
+    summary: <span data-ttu-id="d15cd-101">描述通过调用返回的数据的接口`namedItemCollection.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="d15cd-101">An interface describing the data returned by calling `namedItemCollection.toJSON()`</span></span><!-- --><span data-ttu-id="d15cd-102">.</span><span class="sxs-lookup"><span data-stu-id="d15cd-102"></span></span>
     name: Excel.Interfaces.NamedItemCollectionData
     fullName: Excel.Interfaces.NamedItemCollectionData
     langs:
