--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.pivottableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.pivottableloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="48145-101">表示 Excel 数据透视表。</span><span class="sxs-lookup"><span data-stu-id="48145-101">Represents an Excel PivotTable.</span></span> <span data-ttu-id="48145-102">若要了解有关数据透视表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理数据透视表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span><span class="sxs-lookup"><span data-stu-id="48145-102">To learn more about the PivotTable object model, read [Work with PivotTables using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span></span><!-- --><span data-ttu-id="48145-103">.</span><span class="sxs-lookup"><span data-stu-id="48145-103"></span></span>
+      <span data-ttu-id="e60d1-101">表示 Excel 数据透视表。</span><span class="sxs-lookup"><span data-stu-id="e60d1-101">Represents an Excel PivotTable.</span></span> <span data-ttu-id="e60d1-102">若要了解有关数据透视表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理数据透视表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span><span class="sxs-lookup"><span data-stu-id="e60d1-102">To learn more about the PivotTable object model, read [Work with PivotTables using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span></span><!-- --><span data-ttu-id="e60d1-103">.</span><span class="sxs-lookup"><span data-stu-id="e60d1-103"></span></span>
 
-      <span data-ttu-id="48145-104">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="48145-104">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e60d1-104">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e60d1-104">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.PivotTableLoadOptions
     fullName: Excel.Interfaces.PivotTableLoadOptions
     langs:
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#name:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#$all:member'
+    summary: '<span data-ttu-id="e60d1-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="e60d1-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="e60d1-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="e60d1-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="e60d1-107">).</span><span class="sxs-lookup"><span data-stu-id="e60d1-107"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="48145-105">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="48145-105">Name of the PivotTable.</span></span>
+      <span data-ttu-id="e60d1-108">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="e60d1-108">Name of the PivotTable.</span></span>
 
-      <span data-ttu-id="48145-106">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="48145-106">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e60d1-109">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e60d1-109">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -43,9 +44,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="48145-107">包含当前 PivotTable 对象的工作表。</span><span class="sxs-lookup"><span data-stu-id="48145-107">The worksheet containing the current PivotTable.</span></span>
+      <span data-ttu-id="e60d1-110">包含当前 PivotTable 对象的工作表。</span><span class="sxs-lookup"><span data-stu-id="e60d1-110">The worksheet containing the current PivotTable.</span></span>
 
-      <span data-ttu-id="48145-108">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="48145-108">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="e60d1-111">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e60d1-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheet
     fullName: worksheet
     langs:
