--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartpointformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartpointformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
-    summary: '<span data-ttu-id="7017f-101">一个用于更新 ChartPointFormat 对象上的数据的接口，可用于 "chartPointFormat （</span><span class="sxs-lookup"><span data-stu-id="7017f-101">An interface for updating data on the ChartPointFormat object, for use in "chartPointFormat.set(</span></span><!-- --><span data-ttu-id="7017f-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="7017f-102"></span></span><!-- --><span data-ttu-id="7017f-103">)".</span><span class="sxs-lookup"><span data-stu-id="7017f-103"></span></span>'
+    summary: '<span data-ttu-id="6aa0d-101">一个用于更新 ChartPointFormat 对象上的数据的接口，可用于`chartPointFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="6aa0d-101">An interface for updating data on the ChartPointFormat object, for use in `chartPointFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="6aa0d-102">.</span><span class="sxs-lookup"><span data-stu-id="6aa0d-102"></span></span>'
     name: Excel.Interfaces.ChartPointFormatUpdateData
     fullName: Excel.Interfaces.ChartPointFormatUpdateData
     langs:
