--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.formatprotectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.formatprotectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData:interface'
-    summary: '<span data-ttu-id="b02c9-101">一个用于更新 FormatProtection 对象上的数据的接口，可用于 "formatProtection （</span><span class="sxs-lookup"><span data-stu-id="b02c9-101">An interface for updating data on the FormatProtection object, for use in "formatProtection.set(</span></span><!-- --><span data-ttu-id="b02c9-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="b02c9-102"></span></span><!-- --><span data-ttu-id="b02c9-103">)".</span><span class="sxs-lookup"><span data-stu-id="b02c9-103"></span></span>'
+    summary: '<span data-ttu-id="43e94-101">一个用于更新 FormatProtection 对象上的数据的接口，可用于`formatProtection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="43e94-101">An interface for updating data on the FormatProtection object, for use in `formatProtection.set({ ... })`</span></span><!-- --><span data-ttu-id="43e94-102">.</span><span class="sxs-lookup"><span data-stu-id="43e94-102"></span></span>'
     name: Excel.Interfaces.FormatProtectionUpdateData
     fullName: Excel.Interfaces.FormatProtectionUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.FormatProtectionUpdateData#locked:member'
   - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData#formulaHidden:member'
     summary: |-
-      <span data-ttu-id="b02c9-p101">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="b02c9-p101">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
+      <span data-ttu-id="43e94-p101">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="43e94-p101">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
 
-      <span data-ttu-id="b02c9-106">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b02c9-106">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="43e94-105">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43e94-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.FormatProtectionUpdateData#locked:member'
     summary: |-
-      <span data-ttu-id="b02c9-107">指示 Excel 是否将对象中的单元格锁定。</span><span class="sxs-lookup"><span data-stu-id="b02c9-107">Indicates if Excel locks the cells in the object.</span></span> <span data-ttu-id="b02c9-108">指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="b02c9-108">A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
+      <span data-ttu-id="43e94-106">指示 Excel 是否将对象中的单元格锁定。</span><span class="sxs-lookup"><span data-stu-id="43e94-106">Indicates if Excel locks the cells in the object.</span></span> <span data-ttu-id="43e94-107">指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="43e94-107">A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
 
-      <span data-ttu-id="b02c9-109">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b02c9-109">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="43e94-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="43e94-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: locked
     fullName: locked
     langs:
