--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.rangeborderdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.rangeborderdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeBorderData:interface'
-    summary: <span data-ttu-id="08b51-101">描述通过调用 "rangeBorder （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="08b51-101">An interface describing the data returned by calling "rangeBorder.toJSON()".</span></span>
+    summary: <span data-ttu-id="fed57-101">描述通过调用返回的数据的接口`rangeBorder.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="fed57-101">An interface describing the data returned by calling `rangeBorder.toJSON()`</span></span><!-- --><span data-ttu-id="fed57-102">.</span><span class="sxs-lookup"><span data-stu-id="fed57-102"></span></span>
     name: Excel.Interfaces.RangeBorderData
     fullName: Excel.Interfaces.RangeBorderData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.RangeBorderData#weight:member'
   - uid: 'excel!Excel.Interfaces.RangeBorderData#color:member'
     summary: |-
-      <span data-ttu-id="08b51-102">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="08b51-102">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      <span data-ttu-id="fed57-103">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="fed57-103">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
-      <span data-ttu-id="08b51-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="08b51-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fed57-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fed57-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -30,9 +30,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeBorderData#sideIndex:member'
     summary: |-
-      <span data-ttu-id="08b51-104">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="08b51-104">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="08b51-105">有关详细信息，请参阅 BorderIndex。</span><span class="sxs-lookup"><span data-stu-id="08b51-105">See Excel.BorderIndex for details.</span></span> <span data-ttu-id="08b51-106">只读。</span><span class="sxs-lookup"><span data-stu-id="08b51-106">Read-only.</span></span>
+      <span data-ttu-id="fed57-105">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="fed57-105">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="fed57-106">有关详细信息，请参阅 BorderIndex。</span><span class="sxs-lookup"><span data-stu-id="fed57-106">See Excel.BorderIndex for details.</span></span> <span data-ttu-id="fed57-107">只读。</span><span class="sxs-lookup"><span data-stu-id="fed57-107">Read-only.</span></span>
 
-      <span data-ttu-id="08b51-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="08b51-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fed57-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fed57-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderData#sideIndex~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeBorderData#style:member'
     summary: |-
-      <span data-ttu-id="08b51-108">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="08b51-108">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="08b51-109">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="08b51-109">See Excel.BorderLineStyle for details.</span></span>
+      <span data-ttu-id="fed57-109">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="fed57-109">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="fed57-110">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="fed57-110">See Excel.BorderLineStyle for details.</span></span>
 
-      <span data-ttu-id="08b51-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="08b51-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fed57-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fed57-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderData#style~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeBorderData#weight:member'
     summary: |-
-      <span data-ttu-id="08b51-111">指定区域周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="08b51-111">Specifies the weight of the border around a range.</span></span> <span data-ttu-id="08b51-112">有关详细信息，请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="08b51-112">See Excel.BorderWeight for details.</span></span>
+      <span data-ttu-id="fed57-112">指定区域周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="fed57-112">Specifies the weight of the border around a range.</span></span> <span data-ttu-id="fed57-113">有关详细信息，请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="fed57-113">See Excel.BorderWeight for details.</span></span>
 
-      <span data-ttu-id="08b51-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="08b51-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fed57-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fed57-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: weight
     fullName: weight
     langs:
