--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.shapefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.shapefontupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeFontUpdateData:interface'
-    summary: '<span data-ttu-id="d6c39-101">一个用于更新 ShapeFont 对象上的数据的接口，可用于 "shapeFont （</span><span class="sxs-lookup"><span data-stu-id="d6c39-101">An interface for updating data on the ShapeFont object, for use in "shapeFont.set(</span></span><!-- --><span data-ttu-id="d6c39-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="d6c39-102"></span></span><!-- --><span data-ttu-id="d6c39-103">)".</span><span class="sxs-lookup"><span data-stu-id="d6c39-103"></span></span>'
+    summary: '<span data-ttu-id="7df8e-101">一个用于更新 ShapeFont 对象上的数据的接口，可用于`shapeFont.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="7df8e-101">An interface for updating data on the ShapeFont object, for use in `shapeFont.set({ ... })`</span></span><!-- --><span data-ttu-id="7df8e-102">.</span><span class="sxs-lookup"><span data-stu-id="7df8e-102"></span></span>'
     name: Excel.Interfaces.ShapeFontUpdateData
     fullName: Excel.Interfaces.ShapeFontUpdateData
     langs:
