--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.tablerowcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.tablerowcollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.TableRowCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="3a63a-101">一个用于更新 TableRowCollection 对象上的数据的接口，可用于 "tableRowCollection （</span><span class="sxs-lookup"><span data-stu-id="3a63a-101">An interface for updating data on the TableRowCollection object, for use in "tableRowCollection.set(</span></span><!-- --><span data-ttu-id="3a63a-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="3a63a-102"></span></span><!-- --><span data-ttu-id="3a63a-103">)".</span><span class="sxs-lookup"><span data-stu-id="3a63a-103"></span></span>'
+    summary: '<span data-ttu-id="9c2c4-101">一个用于更新 TableRowCollection 对象上的数据的接口，可用于`tableRowCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="9c2c4-101">An interface for updating data on the TableRowCollection object, for use in `tableRowCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="9c2c4-102">.</span><span class="sxs-lookup"><span data-stu-id="9c2c4-102"></span></span>'
     name: Excel.Interfaces.TableRowCollectionUpdateData
     fullName: Excel.Interfaces.TableRowCollectionUpdateData
     langs:
