--- a/docs/docs-ref-autogen/word_1_1/word/word.interfaces.paragraphcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.interfaces.paragraphcollectionloadoptions.yml
@@ -160,7 +160,7 @@ items:
           - boolean
   - uid: 'word!Word.Interfaces.ParagraphCollectionLoadOptions#parentContentControl:member'
     summary: |-
-      对于集合中的每一项：获取包含段落的内容控件。 如果没有父内容控件，将引发此异常。
+      对于集合中的每一项：获取包含段落的内容控件。 如果没有父内容控件，则会引发错误。
 
       \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: parentContentControl
