--- a/docs/docs-ref-autogen/excel/excel.yml
+++ b/docs/docs-ref-autogen/excel/excel.yml
@@ -108,6 +108,7 @@ items:
       - 'excel!Excel.ChartSeries:class'
       - 'excel!Excel.ChartSeriesBy:enum'
       - 'excel!Excel.ChartSeriesCollection:class'
+      - 'excel!Excel.ChartSeriesDimension:enum'
       - 'excel!Excel.ChartSeriesFormat:class'
       - 'excel!Excel.ChartSplitType:enum'
       - 'excel!Excel.ChartTextHorizontalAlignment:enum'
@@ -878,9 +879,9 @@ items:
       - 'excel!Excel.WorksheetSingleClickedEventArgs:interface'
   - uid: 'excel!Excel.createWorkbook:function(1)'
     summary: |-
-      <span data-ttu-id="f584c-101">创建并打开新工作簿。</span><span class="sxs-lookup"><span data-stu-id="f584c-101">Creates and opens a new workbook.</span></span> <span data-ttu-id="f584c-102">（可选）工作簿可以预先填充 base64 编码的 .xlsx 文件。</span><span class="sxs-lookup"><span data-stu-id="f584c-102">Optionally, the workbook can be pre-populated with a base64-encoded .xlsx file.</span></span>
+      创建并打开新工作簿。 （可选）工作簿可以预先填充 base64 编码的 .xlsx 文件。
 
-      <span data-ttu-id="f584c-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f584c-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.createWorkbook(base64)
     fullName: Excel.createWorkbook(base64)
     langs:
@@ -894,7 +895,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="f584c-104">示例</span><span class="sxs-lookup"><span data-stu-id="f584c-104">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           var myFile = document.getElementById("file");
@@ -955,7 +956,7 @@ items:
           type:
             - any
   - uid: 'excel!Excel.run:function(1)'
-    summary: '<span data-ttu-id="f584c-105">使用新的 RequestContext 执行对 Excel 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="f584c-105">Executes a batch script that performs actions on the Excel object model, using a new RequestContext.</span></span> <span data-ttu-id="f584c-106">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="f584c-106">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用新的 RequestContext 执行对 Excel 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     name: Excel.run(batch)
     fullName: Excel.run(batch)
     langs:
@@ -969,13 +970,13 @@ items:
         description: ''
       parameters:
         - id: batch
-          description: '<span data-ttu-id="f584c-107">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="f584c-107">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="f584c-108">Context 参数可促进对 Excel 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="f584c-108">The context parameter facilitates requests to the Excel application.</span></span> <span data-ttu-id="f584c-109">由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="f584c-109">Since the Office add-in and the Excel application run in two different processes, the RequestContext is required to get access to the Excel object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。
           type:
             - 'excel!Excel.run~1:complex'
       typeParameters:
         - id: T
   - uid: 'excel!Excel.run:function(2)'
-    summary: '<span data-ttu-id="f584c-110">使用以前创建的 API 对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="f584c-110">Executes a batch script that performs actions on the Excel object model, using the RequestContext of a previously-created API object.</span></span> <span data-ttu-id="f584c-111">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="f584c-111">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用以前创建的 API 对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     name: 'Excel.run(object, batch)'
     fullName: 'Excel.run(object, batch)'
     langs:
@@ -989,17 +990,17 @@ items:
         description: ''
       parameters:
         - id: object
-          description: '<span data-ttu-id="f584c-112">以前创建的 API 对象。</span><span class="sxs-lookup"><span data-stu-id="f584c-112">A previously-created API object.</span></span> <span data-ttu-id="f584c-113">批处理将使用与传入的对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由 "context" （）来选取。</span><span class="sxs-lookup"><span data-stu-id="f584c-113">The batch will use the same RequestContext as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的 API 对象。 批处理将使用与传入的对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由 "context" （）来选取。
           type:
             - 'excel!OfficeExtension.ClientObject:class'
         - id: batch
-          description: '<span data-ttu-id="f584c-114">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="f584c-114">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="f584c-115">Context 参数可促进对 Excel 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="f584c-115">The context parameter facilitates requests to the Excel application.</span></span> <span data-ttu-id="f584c-116">由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="f584c-116">Since the Office add-in and the Excel application run in two different processes, the RequestContext is required to get access to the Excel object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。
           type:
             - 'excel!Excel.run~3:complex'
       typeParameters:
         - id: T
   - uid: 'excel!Excel.run:function(3)'
-    summary: '<span data-ttu-id="f584c-117">使用以前创建的 API 对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="f584c-117">Executes a batch script that performs actions on the Excel object model, using the RequestContext of previously-created API objects.</span></span>'
+    summary: 使用以前创建的 API 对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。
     name: 'Excel.run(objects, batch)'
     fullName: 'Excel.run(objects, batch)'
     langs:
@@ -1013,17 +1014,17 @@ items:
         description: ''
       parameters:
         - id: objects
-          description: '<span data-ttu-id="f584c-118">以前创建的 API 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="f584c-118">An array of previously-created API objects.</span></span> <span data-ttu-id="f584c-119">将验证该数组，以确保所有对象都共享相同的上下文。</span><span class="sxs-lookup"><span data-stu-id="f584c-119">The array will be validated to make sure that all of the objects share the same context.</span></span> <span data-ttu-id="f584c-120">批处理将使用此共享 RequestContext，这意味着应用于这些对象的任何更改都将由 "context. sync （）" 选取。</span><span class="sxs-lookup"><span data-stu-id="f584c-120">The batch will use this shared RequestContext, which means that any changes applied to these objects will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的 API 对象的数组。 将验证该数组，以确保所有对象都共享相同的上下文。 批处理将使用此共享 RequestContext，这意味着应用于这些对象的任何更改都将由 "context. sync （）" 选取。
           type:
             - 'excel!Excel.run~5:complex'
         - id: batch
-          description: '<span data-ttu-id="f584c-121">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="f584c-121">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="f584c-122">Context 参数可促进对 Excel 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="f584c-122">The context parameter facilitates requests to the Excel application.</span></span> <span data-ttu-id="f584c-123">由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="f584c-123">Since the Office add-in and the Excel application run in two different processes, the RequestContext is required to get access to the Excel object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。
           type:
             - 'excel!Excel.run~6:complex'
       typeParameters:
         - id: T
   - uid: 'excel!Excel.run:function(4)'
-    summary: '<span data-ttu-id="f584c-124">使用以前创建的 API 对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="f584c-124">Executes a batch script that performs actions on the Excel object model, using the RequestContext of a previously-created API object.</span></span> <span data-ttu-id="f584c-125">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="f584c-125">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用以前创建的 API 对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     name: 'Excel.run(options, batch)'
     fullName: 'Excel.run(options, batch)'
     langs:
@@ -1037,19 +1038,19 @@ items:
         description: ''
       parameters:
         - id: options
-          description: '<span data-ttu-id="f584c-126">此 Excel 的其他选项。运行，它指定以前的对象，是否延迟单元格编辑、会话信息等的请求。</span><span class="sxs-lookup"><span data-stu-id="f584c-126">The additional options for this Excel.run which specify previous objects, whether to delay the request for cell edit, session info, etc.</span></span>'
+          description: 此 Excel 的其他选项。运行，它指定以前的对象，是否延迟单元格编辑、会话信息等的请求。
           type:
             - 'excel!Excel.RunOptions:interface'
         - id: batch
-          description: '<span data-ttu-id="f584c-127">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="f584c-127">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="f584c-128">Context 参数可促进对 Excel 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="f584c-128">The context parameter facilitates requests to the Excel application.</span></span> <span data-ttu-id="f584c-129">由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="f584c-129">Since the Office add-in and the Excel application run in two different processes, the RequestContext is required to get access to the Excel object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。
           type:
             - 'excel!Excel.run~8:complex'
       typeParameters:
         - id: T
   - uid: 'excel!Excel.run:function(5)'
-    summary: '<span data-ttu-id="f584c-130">使用以前创建的对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。</span><span class="sxs-lookup"><span data-stu-id="f584c-130">Executes a batch script that performs actions on the Excel object model, using the RequestContext of a previously-created object.</span></span> <span data-ttu-id="f584c-131">解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。</span><span class="sxs-lookup"><span data-stu-id="f584c-131">When the promise is resolved, any tracked objects that were automatically allocated during execution will be released.</span></span>'
+    summary: 使用以前创建的对象的 RequestContext，执行对 Excel 对象模型执行操作的批处理脚本。 解决承诺时，将释放在执行期间自动分配的任何已跟踪对象。
     remarks: |-
-      <span data-ttu-id="f584c-132">除了此签名之外，该方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="f584c-132">In addition to this signature, the method also has the following signatures:</span></span>
+      除了此签名之外，该方法还具有以下签名：
 
       `run<T>(object: OfficeExtension.ClientObject, batch: (context: Excel.RequestContext) => Promise<T>): Promise<T>;`
 
@@ -1071,11 +1072,11 @@ items:
         description: ''
       parameters:
         - id: context
-          description: '<span data-ttu-id="f584c-133">以前创建的对象。</span><span class="sxs-lookup"><span data-stu-id="f584c-133">A previously-created object.</span></span> <span data-ttu-id="f584c-134">批处理将使用与传入的对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由 "context" （）来选取。</span><span class="sxs-lookup"><span data-stu-id="f584c-134">The batch will use the same RequestContext as the passed-in object, which means that any changes applied to the object will be picked up by "context.sync()".</span></span>'
+          description: 以前创建的对象。 批处理将使用与传入的对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由 "context" （）来选取。
           type:
             - 'excel!OfficeExtension.ClientRequestContext:class'
         - id: batch
-          description: '<span data-ttu-id="f584c-135">一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。</span><span class="sxs-lookup"><span data-stu-id="f584c-135">A function that takes in a RequestContext and returns a promise (typically, just the result of "context.sync()").</span></span> <span data-ttu-id="f584c-136">Context 参数可促进对 Excel 应用程序的请求。</span><span class="sxs-lookup"><span data-stu-id="f584c-136">The context parameter facilitates requests to the Excel application.</span></span> <span data-ttu-id="f584c-137">由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="f584c-137">Since the Office add-in and the Excel application run in two different processes, the RequestContext is required to get access to the Excel object model from the add-in.</span></span>'
+          description: 一个采用 RequestContext 的函数，并返回一个承诺（通常只是 "context. sync （）" 的结果）。 Context 参数可促进对 Excel 应用程序的请求。 由于 Office 加载项和 Excel 应用程序在两个不同的进程中运行，因此需要 RequestContext 以从外接程序获取对 Excel 对象模型的访问权限。
           type:
             - 'excel!Excel.run~10:complex'
       typeParameters:
@@ -1283,6 +1284,8 @@ references:
     name: Excel.ChartSeriesBy
   - uid: 'excel!Excel.ChartSeriesCollection:class'
     name: Excel.ChartSeriesCollection
+  - uid: 'excel!Excel.ChartSeriesDimension:enum'
+    name: Excel.ChartSeriesDimension
   - uid: 'excel!Excel.ChartSeriesFormat:class'
     name: Excel.ChartSeriesFormat
   - uid: 'excel!Excel.ChartSplitType:enum'
